small content changes.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
 <header>
-    <h1>Hello !!</h1>
+    <h1 style="text-align: left;">Hello !!</h1>
 </header>
 <main>
     <section>
@@ -48,20 +48,20 @@
     </section>
     <section>
         <h2>My Portfolio</h2>
-        <p>
-            Please visit my <a href="https://github.com/soumyarm88">GitHub Profile</a>.
-        </p>
+        <ul>
+            <li>Please visit my <a href="https://github.com/soumyarm88">GitHub Profile</a></li>
+        </ul>
     </section>
     <section>
         <h2>Contact Me</h2>
-        <p>
-            Email: <a href="mailto:soumya.r.maharana@gmail.com"></a>.
-            LinkedIn: <a href="https://www.linkedin.com/in/soumyarm88/">Soumya</a>
-        </p>
+        <ul>
+            <li>Email: <a href="mailto:soumya.r.maharana@gmail.com">soumya.r.maharana@gmail.com</a></li>
+            <li>LinkedIn: <a href="https://www.linkedin.com/in/soumyarm88/">soumyarm88</a></li>
+        </ul>
     </section>
 </main>
 <footer>
-    <p>&copy; tech.soumyarm88</p>
+    <p style="text-align: left;">&copy; tech.soumyarm88</p>
 </footer>
 </body>
 </html>
