--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
         header, footer {
             background-color: #333;
             color: white;
-            text-align: center;
-            padding: 1em 0;
+            text-align: left;
+            padding: 2rem;
         }
         main {
-            padding: 2em;
+            padding: 2rem;
+            max-width: 160rch;
         }
         h1 {
             color: #007bff;
@@ -35,15 +36,19 @@
 </head>
 <body>
 <header>
-    <h1 style="text-align: left;">Hello !!</h1>
+    <h1>Hello !!</h1>
 </header>
 <main>
     <section>
         <h2>About Me</h2>
         <p>
             Hello! I'm Soumya.
-            I am a Software Engineer skilled in building resilient, scalable systems for enterprise identity and e-commerce platforms, with expertise in distributed architectures and AWS.
-            I am curious about learning machine learning through hands-on projects.
+        </p>
+        <p>
+            Software Engineer skilled in building resilient, scalable systems for enterprise identity and e-commerce platforms, with expertise in distributed architectures and AWS.
+        </p>
+        <p>
+            Curious about learning AI-ML through hands-on tutorials and projects. Currently working through Andrej Karpathy's Neural Networks: Zero to Hero.
         </p>
     </section>
     <section>
@@ -61,7 +66,7 @@
     </section>
 </main>
 <footer>
-    <p style="text-align: left;">&copy; tech.soumyarm88</p>
+    <p>&copy; tech.soumyarm88</p>
 </footer>
 </body>
 </html>
