--- a/index.html
+++ b/index.html
@@ -5,22 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Soumya R.</title>
     <style>
-        body {
-            font-family: sans-serif;
+        html, body {
+            height: 100%;
             margin: 0;
             padding: 0;
+        }
+        body {
+            font-family: sans-serif;
             background-color: #f4f4f4;
             color: #333;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
-        header, footer {
-            background-color: #333;
+        header {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            background-color: #222;
             color: white;
             text-align: left;
-            padding: 2rem;
+            padding: 1rem 2rem;
+            box-sizing: border-box;
+        }
+        footer {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            background-color: #222;
+            color: white;
+            text-align: left;
+            padding: 1rem 2rem;
+            box-sizing: border-box;
         }
         main {
+            flex: 1;
             padding: 2rem;
             max-width: 160rch;
+            margin-top: 100px; /* Adjust this value based on your header height */
+            margin-bottom: 100px; /* Adjust this value based on your footer height */
         }
         h1 {
             color: #007bff;
